Fix toolbar spacing and alignment

--- a/src/scss/lr7-classic-theme/_toolbars.scss
+++ b/src/scss/lr7-classic-theme/_toolbars.scss
@@ -20,7 +20,7 @@
 	line-height: normal;
 	margin-bottom: 5px;
 	overflow: hidden;
-	padding: 0;
+	padding: 0 5px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	width: 100%;
@@ -77,6 +77,7 @@ form.toolbar-group-expand {
 	form.toolbar-group-expand {
 		clear: none;
 		display: table-cell;
+		vertical-align: middle;
 	}
 
 	.toolbar-group-field {
@@ -87,7 +88,7 @@ form.toolbar-group-expand {
 // Toolbar Base Styles
 
 .toolbar-group-field, .toolbar-group-content {
-	&.active a {
+	&.active > a {
 		color: $gray-light;
 		cursor: default;
 
@@ -96,7 +97,7 @@ form.toolbar-group-expand {
 		}
 	}
 
-	&.disabled a {
+	&.disabled > a {
 		color: $gray-lighter;
 		cursor: not-allowed;
 	}
@@ -114,7 +115,7 @@ form.toolbar-group-expand {
 		}
 	}
 
-	.active a {
+	.active > a {
 		color: $navbar-default-link-hover-color;
 	}
 }
